// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
    invalid:
invalid:
---



<html><head></head><body></body></html>

=====================================output=====================================
---
    invalid:
invalid:
---

<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;

exports[`yaml.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello:     world
---






<html><head></head><body></body></html>

=====================================output=====================================
---
hello: world
---

<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;
